--- a/HTML/templates/company-vacancy-post.html
+++ b/HTML/templates/company-vacancy-post.html
@@ -7,7 +7,7 @@
                 <p class="info-text">Job titles must describe one position</p>
             </div>
             <div class="input-container">
-                <input type="text" id="job-title" name="job-title" placeholder="Lore Ipsum">
+                <input type="text" id="job-title" name="job-title" placeholder="You write a job title" required>
             </div>
         </section>
 
