--- a/HTML/templates/company-sign-in.html
+++ b/HTML/templates/company-sign-in.html
@@ -15,7 +15,7 @@
                 <input type="email" id="email" placeholder="Enter email address" required>
 
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter password" required>
+                <input type="password" id="password" placeholder="Enter password" required minlength="8">
 
                 <button type="submit" class="submit-button" >Login</button>
             </form>
