--- a/HTML/templates/company-sign-up.html
+++ b/HTML/templates/company-sign-up.html
@@ -18,15 +18,18 @@
                 <input type="email" id="email" placeholder="Enter email address" required>
 
                 <label for="cif-nif">CIF/NIF</label>
-                <input type="number" id="cif-nif" placeholder="Enter your CIF/NIF" required>
+                <input type="text" id="cif-nif" name="cif-nif" placeholder="Enter your CIF/NIF"
+                       pattern="^([ABCDEFGHJKLMNPQRSUVW]\d{7}[0-9A-J])|(\d{8}[A-Z])|([XYZ]\d{7}[A-Z])$"
+                       title="Enter a valid CIF/NIF (Ej: A12345678, 12345678Z, X1234567T)"
+                       required>
 
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter password" required>
+                <input type="password" id="password" placeholder="Enter password" required minlength="8">
 
                 <label for="password-confirm">Confirm Password</label>
-                <input type="password" id="password-confirm" placeholder="Repeat the password" required>
+                <input type="password" id="password-confirm" placeholder="Repeat the password" required minlength="8">
 
-                <button type="submit" class="submit-button" >Sign up</button>
+                <button type="submit" class="submit-button">Sign up</button>
             </form>
         </section>
 
