--- a/HTML/templates/job-seeker-sign-in.html
+++ b/HTML/templates/job-seeker-sign-in.html
@@ -12,10 +12,8 @@
       <form id="loginFormUser">
         <label for="email">Email Address</label>
         <input type="email" id="email" required placeholder="Enter email address" >
-
         <label for="password">Password</label>
-        <input type="password" id="password" required placeholder="Enter password" >
-        <!--  onclick="redirectToFindJobsJobSeeker(event, this)" -->
+        <input type="password" id="password" required placeholder="Enter password"  minlength="8" >
         <button type="submit" class="submit-button" onclick="callvalidate()">Login</button>
       </form>
     </section>
