--- a/HTML/views/job-seeker-profile-job-seeker.html
+++ b/HTML/views/job-seeker-profile-job-seeker.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Employment web site">
-        <meta name="keywords" content="HTML5, CSS3, JavaScript">
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Employment web site">
+    <meta name="keywords" content="HTML5, CSS3, JavaScript">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JobTray</title>
+    <script src="/JS/redirectFunctions.js"></script>
+    <script src="/JS/auxiliaryFunctions.js"></script>
+    <script src="/JS/viewComposition.js"></script>
+    <script src="/JS/viewComposition.js"></script>
+    <script src="/JS/ChangeTitle.js" ></script>
+    <script src="/JS/ChangeButtonPlaceProfile.js" ></script>
 
-        <title>JobTray</title>
-        <script src="/JS/redirectFunctions.js"></script>
-        <script src="/JS/auxiliaryFunctions.js"></script>
-        <script src="/JS/viewComposition.js"></script>
 
-        <link rel="stylesheet" href="/CSS/general-style.css">
-        <link rel="stylesheet" href="/CSS/headers.css">
-        <link rel="stylesheet" href="/CSS/profiles-style.css">
-        <link rel="stylesheet" href="/CSS/footer-style.css">
-    </head>
-    <body>
-        <div id="wrapper">
-            <header id="job_seeker_header">
-            </header>
 
-            <section id="main-tittle">
-            </section>
+    <link rel="stylesheet" href="/CSS/general-style.css">
+    <link rel="stylesheet" href="/CSS/headers.css">
+    <link rel="stylesheet" href="/CSS/profiles-style.css">
+    <link rel="stylesheet" href="/CSS/footer-style.css">
 
-            <main id="job-seeker-profile-content">
-            </main>
+</head>
+<body>
+<div id="wrapper">
+    <header id="job_seeker_header">
+    </header>
 
-            <footer id="footer">
-            </footer>
-        </div>
-        <script>
-            loadViewJobSeekerProfileJobSeeker();
-        </script>
-    </body>
+    <section id="main-tittle">
+    </section>
+
+    <main id="job-seeker-profile-content">
+    </main>
+
+    <footer id="footer">
+    </footer>
+    </div>
+    <script>
+
+        loadViewJobSeekerProfileJobSeeker();
+
+
+
+
+</script>
+</body>
 </html>
