--- a/HTML/views/vacancy-view-company.html
+++ b/HTML/views/vacancy-view-company.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="description" content="Employment web site">
     <meta name="keywords" content="HTML5, CSS3, JavaScript">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JobTray</title>
     <script src="/JS/redirectFunctions.js"></script>
     <script src="/JS/auxiliaryFunctions.js"></script>
     <script src="/JS/viewComposition.js"></script>
+    <script src="/JS/ChangeButtonPlaceVacancyEdit.js"></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
