--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -11,8 +11,8 @@
 
             <button class="mobile-btn" >☰</button>
             <div class="mobile-btn-container">
-                <button class="company-buttons" onclick="redirectToJobListingCompany(event, this)">Job Listing</button>
-                <button class="company-buttons" onclick="redirectToVacancyPostCompany(event, this)">Post a job</button>
+                <button class="company-buttons-mobile" onclick="redirectToJobListingCompany(event, this)">Job Listing</button>
+                <button class="company-buttons-mobile" onclick="redirectToVacancyPostCompany(event, this)">Post a job</button>
             </div>
 
             <section class="buttons-section-header">
