--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -9,7 +9,7 @@
             <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
 
             <button class="mobile-btn" >☰</button>
-            <div class="mobile-btn-container">
+            <div class="mobile-btn-container-job-seeker">
                 <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
             </div>
         </section>
@@ -30,4 +30,5 @@
             </div>
         </section>
     </section>
+
 </header>
